@@ -63,3 +63,13 @@ except IOError, exc5: # this is fine
     print exc5
 except MyOtherError, exc5: # this is fine
     print exc5
+
+def new_style():
+    """Some exceptions can be unpacked."""
+    try:
+        pass
+    except IOError as (errno, message): # this is fine
+        print errno, message
+    except IOError as (new_style, tuple): # W0623 twice
+        print new_style, tuple
+        
