@@ -2,6 +2,9 @@ ChangeLog for PyLint
 ====================
 
 	--
+    * #93591: Correctly emit warnings about clobbered variable names when an
+      except handler contains a tuple of names instead of a single name.
+      (patch by tmarek@google.com)
 
     * #7394: W0212 (access to protected member) not emited on assigments
     (patch by lothiraldan@gmail.com)
